Fix google guice warning for JDK 11