@@ -1,11 +1,10 @@
-dependencies {
-	compile project(':de.uniba.swt.dsl')
-	compile "org.eclipse.xtext:org.eclipse.xtext.ide:${xtextVersion}"
-	compile "org.eclipse.xtext:org.eclipse.xtext.xbase.ide:${xtextVersion}"
+plugins {
+	id "application"
 }
-
-apply plugin: 'application'
-mainClassName = "org.eclipse.xtext.ide.server.ServerLauncher"
+application {
+	mainClassName = "org.eclipse.xtext.ide.server.ServerLauncher"
+	applicationDefaultJvmArgs = ["--add-opens","java.base/java.lang=ALL-UNNAMED"]
+}
 distributions {
 	main {
 		distributionBaseName = "bahn-ide-server"
@@ -13,6 +12,12 @@ distributions {
 }
 tasks.withType(CreateStartScripts) {
 	applicationName = "bahn-ide-server"
+}
+
+dependencies {
+	implementation project(":de.uniba.swt.dsl")
+	implementation "org.eclipse.xtext:org.eclipse.xtext.ide:${xtextVersion}"
+	implementation "org.eclipse.xtext:org.eclipse.xtext.xbase.ide:${xtextVersion}"
 }
 
 //this is an eclipse plugin project
